src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Adjustment_Percent__c</fullName>
        <label>Adjustment Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Leadership/Management/Supervisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft/Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications/Interpersonal/Teambuilding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources/Professional Development/Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management/Time Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance and Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing/Lean/Safety</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workbook_Location__c</fullName>
        <label>Workbook Location</label>
        <picklist>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Demand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workbook_UPC__c</fullName>
        <label>Workbook UPC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Workbook_Location__c</columns>
        <columns>Workbook_UPC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>